--- a/recipy-blog/recipy.html
+++ b/recipy-blog/recipy.html
@@ -8,11 +8,11 @@
 <body>
     <header>
         <section>
-            <img src="./assets/chef.png" alt="logo" width="80px">
+            <a href="#"><img src="./assets/chef.png" alt="logo" width="80px"></a>
         </section>
         <nav>
             <a href="#">Home</a>
-            <a href="#">About us</a>
+            <a href="./about.html">About us</a>
         </nav>
     </header>
     <main>
@@ -40,23 +40,23 @@
                 <h2>Ingredients:</h2>
                 <ul>
                     <li itemprop="recipeIngredient" > 2 cups all-purpose flour</li>
-                    <li>1 teaspoon baking soda</li>
-                    <li>¼ teaspoon salt</li>
-                    <li>¾ cup brown sugar</li>
-                    <li>½ cup butter</li>
-                    <li>2 large eggs, beaten</li>
-                    <li>2 ⅓ cups mashed overripe bananas</li>
+                    <li itemprop="recipeIngredient">1 teaspoon baking soda</li>
+                    <li itemprop="recipeIngredient">¼ teaspoon salt</li>
+                    <li itemprop="recipeIngredient">¾ cup brown sugar</li>
+                    <li itemprop="recipeIngredient">½ cup butter</li>
+                    <li itemprop="recipeIngredient">2 large eggs, beaten</li>
+                    <li itemprop="recipeIngredient">2 ⅓ cups mashed overripe bananas</li>
                 </ul>
             </div>
             <div>
                 <h2>Step by step:</h2>
                 <div>
                     <h3>Step 1</h3>
-                    <p>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x5-inch loaf pan.</p>
+                    <p itemprop="step">Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x5-inch loaf pan.</p>
                 </div>
                 <div>
                     <h3>Step 2</h3>
-                    <p>
+                    <p itemprop="step">
                         Combine flour, baking soda, and salt in a large bowl. Beat brown sugar and butter
                          with an electric mixer in a separate large bowl until smooth. Stir in eggs
                         and mashed bananas until well blended. Stir banana mixture into flour mixture
@@ -65,7 +65,7 @@
                 </div>
                 <div>
                     <h3>Step 3</h3>
-                    <p>
+                    <p itemprop="step">
                         Bake in the preheated oven until a toothpick inserted into the center
                          comes out clean, about 60 minutes. Let bread cool in pan for 10 minutes, 
                          then turn out onto a wire rack to cool completely.
@@ -131,37 +131,37 @@
                 <h2>Step by step:</h2>
                 <div>
                     <h3>Step 1</h3>
-                    <p>
+                    <p itemprop="step">
                         For blackberry sauce, combine frozen blackberries, sugar, lemon juice, and lemon zest in a small saucepan set over medium-low heat. Cook, stirring often, until berries fall apart, 8 to 10 minutes. Remove mixture from heat, and pour into a fine mesh sieve set over a bowl. Use the back of a wooden spoon or spatula to press berry mixture through the sieve, extracting as much juice as possible. Discard seeds. Pour sauce back into saucepan and bring to a simmer over low heat.
                     </p>
                 </div>
                 <div>
                     <h3>Step 2</h3>
-                    <p>
+                    <p itemprop="step">
                         Stir cornstarch and water together in a small bowl until thoroughly combined; stir cornstarch slurry into blackberry sauce and continue to cook, stirring constantly, until slightly thickened, 1 to 2 minutes. Remove from heat, and allow blackberry sauce to cool completely, about 20 minutes. The sauce can be refrigerated to speed up cooling.
                     </p>
                 </div>
                 <div>
                     <h3>Step 3</h3>
-                    <p>
+                    <p itemprop="step">
                         Preheat the oven to 350 degrees F (175 degrees C). Line an 8x8-inch square pan with enough parchment paper to have overhang on all sides.
                     </p>
                 </div>
                 <div>
                     <h3>Step 4</h3>
-                    <p>Prepare brownie layer: whisk melted butter, brown sugar, and salt together in a large bowl until thoroughly combined. Whisk in egg, egg yolk, and vanilla until thoroughly incorporated. Add in cocoa powder, flour, and baking soda and stir until just combined. Batter will be somewhat thick. Spread brownie batter into the prepared pan in a smooth, even layer.</p>
+                    <p itemprop="step">Prepare brownie layer: whisk melted butter, brown sugar, and salt together in a large bowl until thoroughly combined. Whisk in egg, egg yolk, and vanilla until thoroughly incorporated. Add in cocoa powder, flour, and baking soda and stir until just combined. Batter will be somewhat thick. Spread brownie batter into the prepared pan in a smooth, even layer.</p>
                 </div>
                 <div>
                     <h3>Step 5</h3>
-                    <p>Prepare cheesecake layer: Beat cream cheese, white sugar, salt, and nutmeg together in a bowl with an electric mixer until smooth and creamy. Add in egg white, lemon juice, and vanilla and mix until thoroughly incorporated. Pour in heavy cream and mix until combined. Pour cheesecake layer over brownie layer and smooth into an even layer.</p>
+                    <p itemprop="step">Prepare cheesecake layer: Beat cream cheese, white sugar, salt, and nutmeg together in a bowl with an electric mixer until smooth and creamy. Add in egg white, lemon juice, and vanilla and mix until thoroughly incorporated. Pour in heavy cream and mix until combined. Pour cheesecake layer over brownie layer and smooth into an even layer.</p>
                 </div>
                 <div>
                     <h3>Step 6</h3>
-                    <p>Place dollops of the cooled blackberry sauce over the cheesecake layer. Use a knife to swirl only the cheesecake layer and blackberry sauce together; taking care not to go into the brownie layer. Swirl as many or as few times as needed to get the desired marbled effect.</p>
+                    <p itemprop="step">Place dollops of the cooled blackberry sauce over the cheesecake layer. Use a knife to swirl only the cheesecake layer and blackberry sauce together; taking care not to go into the brownie layer. Swirl as many or as few times as needed to get the desired marbled effect.</p>
                 </div>
                 <div>
                     <h3>Step 7</h3>
-                    <p>Bake in the preheated oven until the center of the bars are puffed and mostly set, 55 to 60 minutes. The edges will bake up taller than the center, and will begin to turn golden brown when they are done. Allow bars to cool to room temperature in the pan, then refrigerate for at least 4 hours to overnight. Cut into 16 bars before serving.</p>
+                    <p itemprop="step">Bake in the preheated oven until the center of the bars are puffed and mostly set, 55 to 60 minutes. The edges will bake up taller than the center, and will begin to turn golden brown when they are done. Allow bars to cool to room temperature in the pan, then refrigerate for at least 4 hours to overnight. Cut into 16 bars before serving.</p>
                 </div>
             </div>
         </section>
